Fix spacing on sub-headings that wrap.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@ https://github.com/stephenmcd/stephenmcd.github.com/blob/master/LICENSE
 footer {border-top:3px solid #eee; margin:30px 0;}
 
 h1 {font-size:24px; border-bottom:3px solid #eee; padding:10px 0; margin:20px 0 0 0;}
-h4 {margin:20px 0 0 0;}
+h4 {margin:20px 0 10px 0; line-height:22px;}
 h6 {margin:20px 0 5px 0;}
 h6 a {font-weight:normal;}
 
